# FastCloseCPA

./: .deployment  .gitignore  .replit  app.py  extensions.py  generate_requirements.py  gunicorn.conf.py  models.py  pyproject.toml  requirements.txt  startup.sh  startup.txt  staticwebapp.config.json  tests.py  web.config
api/: function_app.py  requirements.txt
attached_assets/: ImranBaigCPAResume1224.docx  Pasted-2025-01-31-03-15-55-230-main-INFO-Flask-application-instance-created-2025-01-31-03-15-55--1738293384075.txt  Pasted-3s-Run-Azure-static-web-apps-deploy-v1-usr-bin-docker-run-name-adc35cf90dd76a8046d9925bb1eaad56-1737857096259.txt  Pasted-Banner-Specifications-1-Layout-Design-Background-Clean-modern-background-with-a-subtle-gradi-1735829342759.txt  Pasted-Deprecation-notice-v3-of-the-artifact-actions-actionsclosing-downopen-source-April-16-2024-Star-1738293790654.txt  Pasted-Objective-Add-a-Thumbtack-5-star-review-badge-to-the-banner-section-of-my-website-The-badge-should-1735835053738.txt  Pasted-Run-Azure-static-web-apps-deploy-v1-usr-bin-docker-run-name-adc35cf90dd76a8046d9925bb1eaad5628ff-1737859024352.txt  Pasted-Run-Azure-static-web-apps-deploy-v1-usr-bin-docker-run-name-adc3aab0b9d459794349b2299f32157b3364-1737856312128.txt  Pasted-RuntimeError-RuntimeError-The-session-is-unavailable-because-no-secret-key-was-set-Set-the-secre-1736548541432.txt  Pasted-Skip-to-content-Navigation-Menu-imransbaig-imransbaig-Type-to-search-Code-Pull-requests-A-1737856388064.txt  (+3 more)
blueprints/: client_portal.py
static/: index.html
templates/: about.html  base.html  (+8 more)
(+12 files in other folders)
