
[project]
name = "fastcloseai"
version = "0.1.0"
description = "FastClose AI CPAs - Financial Management Platform"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.2.0",
    "flask-login==0.6.3",
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "trafilatura==2.0.0",
    "werkzeug==3.1.3",
    "wfastcgi==3.0.0",
    "flask-mail==0.9.1",
    "sendgrid>=6.11.0",
    "python-dotenv==1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-flask>=1.3.0",
    "pytest>=8.3.4",
    "waitress>=3.0.2",
]
